--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SheetMusicGame</title>
+    <link rel="stylesheet" href="music.css">
 </head>
 <body>
     <script type="module" src="./app.js"></script>
+    <div class="symbol" id='note'></div>
     <input type="file" id="filereader"/>
     <div style="background:lightgrey; padding:20px;">
         <h3>Parsed Output :</h3>
