Added renderer.js. Currently renders main sheet symbols

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="music.css">
 </head>
 <body>
+    <style>body {margin: 0;}</style>
     <script type="module" src="./app.js"></script>
+    <canvas></canvas>
     <div class="symbol" id='note'></div>
     <input type="file" id="filereader"/>
     <div style="background:lightgrey; padding:20px;">
